# chat_tts_api

./: README.md
backend/: .env  .gitignore  main.py  minio_client.py  pyproject.toml
backend/speakers/: seed_1.pt  seed_10.pt  seed_100.pt  seed_1000.pt  seed_1001.pt  seed_1002.pt  seed_1003.pt  seed_1004.pt  seed_1005.pt  seed_1006.pt  seed_1007.pt  seed_1008.pt  seed_1009.pt  seed_101.pt  seed_1010.pt  seed_1011.pt  seed_1012.pt  seed_1013.pt  seed_1014.pt  seed_1015.pt  seed_1016.pt  seed_1017.pt  seed_1018.pt  seed_1019.pt  seed_102.pt  seed_1020.pt  seed_1021.pt  seed_1022.pt  seed_1023.pt  seed_1024.pt  seed_1025.pt  seed_1026.pt  seed_1027.pt  seed_1028.pt  seed_1029.pt  seed_103.pt  seed_1030.pt  seed_1031.pt  seed_1032.pt  seed_1033.pt  (+2556 more)
backend/tests/: test_generate_speakers_pt.py
frontend/: .env.production  components.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  public.scss
frontend/src/components/: Loading.vue
frontend/src/enum/: errorEnum.ts
frontend/src/resource/: iconResource.ts
frontend/src/router/: index.ts
frontend/src/views/: Home.vue
frontend/src/views/ttsTest/: HlsVideo.vue  TtsTest.vue
